Changed channelLink field to input type url

--- a/client/client.html
+++ b/client/client.html
@@ -133,7 +133,7 @@
                 <br />
 
                 <label for="channelLink">Link to Channel: </label>
-                <input id="linkField" type="text" name="channelLink"
+                <input id="linkField" type="url" name="channelLink"
                      placeholder="https://www.twitch.tv/channelName" />
 
                 <br />
