--- a/client/client.html
+++ b/client/client.html
@@ -4,7 +4,6 @@
   <title>Twitch Stream Tracker</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Oxygen&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/style.css">
-  <!--<link rel="stylesheet" type="text/css" href="style.css">-->
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
@@ -106,7 +105,10 @@
                 
                 upcoming.appendChild(link);
                 upcoming.appendChild(info);
-                upcoming.appendChild(rule);
+                
+                if(i != sortedStreamers.length - 1){ //Don't add an hr to the very last stream
+                    upcoming.appendChild(rule);
+                }
             }
         }
     };
@@ -184,6 +186,7 @@
         <h3 id="title">Stream Tracker</h3>
         <h4 id="subtitle">Never miss your favorite streams!</h4>
     </section>
+    <section id="error"></section>
     <section id="container">
         <section id="form">
             <form id="streamerForm" action="/addStreamer" method="post">
